--- a/index.html
+++ b/index.html
@@ -1,13 +1,28 @@
-
 <!DOCTYPE html>
-<html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Stranger Things Valentine</title>
-  </head>
-  <body>
-    <div id="root"></div>
-    <script type="module" src="./src/main.jsx"></script>
-  </body>
+<html>
+<head>
+  <title>Will You Be My Valentine?</title>
+  <link rel="stylesheet" href="style.css">
+</head>
+<body>
+
+<div class="overlay"></div>
+<div class="lightning"></div>
+
+<!-- Wall Lights -->
+<div class="wall-lights">
+  <span></span><span></span><span></span><span></span>
+  <span></span><span></span><span></span><span></span>
+  <span></span><span></span>
+</div>
+
+<h1 class="title">Will You Be My Valentine?</h1>
+
+<div class="buttons">
+  <button id="yes">YES ❤️</button>
+  <button id="no">NO 💔</button>
+</div>
+
+<script src="script.js"></script>
+</body>
 </html>
